--- a/packages/prettier-config/package.json
+++ b/packages/prettier-config/package.json
@@ -2,17 +2,17 @@
   "name": "@tszhong0411/prettier-config",
   "version": "0.0.18",
   "description": "The prettier config for tszhong0411's projects",
-  "license": "MIT",
-  "author": "tszhong0411 <me@nelsonlai.me> (https://github.com/tszhong0411/)",
   "homepage": "https://github.com/tszhong0411/nelsonlai.me#readme",
+  "bugs": {
+    "url": "https://github.com/tszhong0411/nelsonlai.me/issues"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/tszhong0411/nelsonlai.me.git",
     "directory": "packages/prettier-config"
   },
-  "bugs": {
-    "url": "https://github.com/tszhong0411/nelsonlai.me/issues"
-  },
+  "license": "MIT",
+  "author": "tszhong0411 <me@nelsonlai.me> (https://github.com/tszhong0411/)",
   "type": "module",
   "exports": {
     ".": {
@@ -21,6 +21,7 @@
     }
   },
   "main": "./dist/index.js",
+  "types": "./dist/index.d.ts",
   "files": [
     "dist"
   ],
@@ -32,20 +33,19 @@
     "lint:fix": "eslint --fix .",
     "type-check": "tsc --noEmit"
   },
-  "types": "./dist/index.d.ts",
-  "peerDependencies": {
-    "@tszhong0411/prettier-plugin-package-json": "^1.0.0",
-    "prettier": "3.x",
-    "prettier-plugin-tailwindcss": "^0.6.12"
+  "lint-staged": {
+    "*.{cjs,mjs,js,jsx,cts,mts,ts,tsx,json}": "eslint --fix"
   },
   "devDependencies": {
     "@tszhong0411/eslint-config": "workspace:*",
     "@tszhong0411/tsconfig": "workspace:*"
   },
+  "peerDependencies": {
+    "prettier": "3.x",
+    "prettier-plugin-packagejson": "^2.5.18",
+    "prettier-plugin-tailwindcss": "^0.6.12"
+  },
   "publishConfig": {
     "access": "public"
-  },
-  "lint-staged": {
-    "*.{cjs,mjs,js,jsx,cts,mts,ts,tsx,json}": "eslint --fix"
   }
 }
