chore: migrate build system from rslib to tsdown

--- a/package.json
+++ b/package.json
@@ -58,7 +58,6 @@
     "@commitlint/config-conventional": "^19.8.1",
     "@cspell/dict-redis": "^1.0.5",
     "@playwright/test": "^1.52.0",
-    "@rslib/core": "^0.9.1",
     "@tszhong0411/eslint-config": "workspace:*",
     "@tszhong0411/prettier-config": "workspace:*",
     "@tszhong0411/tsconfig": "workspace:*",
@@ -79,6 +78,7 @@
     "prettier-plugin-packagejson": "^2.5.18",
     "prettier-plugin-tailwindcss": "^0.6.13",
     "ts-morph": "^26.0.0",
+    "tsdown": "^0.12.9",
     "tsx": "^4.19.4",
     "turbo": "^2.5.4",
     "typescript": "^5.8.3",
