--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -31,9 +31,9 @@
     "styles"
   ],
   "scripts": {
-    "build": "rslib build",
+    "build": "tsdown",
     "clean": "rm -rf .turbo dist",
-    "dev": "rslib build --watch",
+    "dev": "tsdown --watch",
     "lint": "eslint . --max-warnings 0",
     "lint:fix": "eslint --fix .",
     "type-check": "tsc --noEmit"
@@ -95,7 +95,6 @@
     "zod": "^3.25.51"
   },
   "devDependencies": {
-    "@rsbuild/plugin-react": "^1.3.2",
     "@tszhong0411/eslint-config": "workspace:*",
     "@tszhong0411/tsconfig": "workspace:*",
     "@tszhong0411/utils": "workspace:*",
