--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -26,9 +26,9 @@
     "dist"
   ],
   "scripts": {
-    "build": "rslib build",
+    "build": "tsdown",
     "clean": "rm -rf .turbo dist",
-    "dev": "rslib build --watch",
+    "dev": "tsdown --watch",
     "lint": "eslint . --max-warnings 0",
     "lint:fix": "eslint --fix .",
     "type-check": "tsc --noEmit"
