refactor: remove unused pnpm configuration from package.json

--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -1,8 +1,10 @@
 packages:
   - apps/*
   - packages/*
+
 onlyBuiltDependencies:
   - '@parcel/watcher'
+  - '@tailwindcss/oxide'
   - '@vercel/speed-insights'
   - core-js-pure
   - esbuild
