--- a/.github/actions/setup/action.yml
+++ b/.github/actions/setup/action.yml
@@ -37,14 +37,34 @@ runs:
       shell: bash
       run: |
         cat << EOF > .env.local
-        DATABASE_URL=postgres://postgres:postgres@localhost:5432/nelsonlaime
-        RESEND_API_KEY=re_fake_api_key
-        UPSTASH_REDIS_REST_URL=http://127.0.0.1:8079
-        UPSTASH_REDIS_REST_TOKEN=nelsonlaime
-        BETTER_AUTH_SECRET=1234567890
-        NEXT_PUBLIC_FLAG_COMMENT=true
-        NEXT_PUBLIC_FLAG_AUTH=true
-        NEXT_PUBLIC_FLAG_STATS=true
-        NEXT_PUBLIC_FLAG_SPOTIFY=true
-        NEXT_PUBLIC_FLAG_LIKE_BUTTON=true
+        SPOTIFY_CLIENT_ID="test_client_id"
+        SPOTIFY_CLIENT_SECRET="test_client_secret"
+        SPOTIFY_REFRESH_TOKEN="test_refresh_token"
+
+        GOOGLE_API_KEY="test_google_api_key"
+        GITHUB_TOKEN="test_github_token"
+        WAKATIME_API_KEY="test_wakatime_api_key"
+
+        BETTER_AUTH_SECRET="test_secret_key_32_chars_minimum"
+
+        GOOGLE_CLIENT_ID="test_google_client_id"
+        GOOGLE_CLIENT_SECRET="test_google_client_secret"
+        GITHUB_CLIENT_ID="test_github_client_id"
+        GITHUB_CLIENT_SECRET="test_github_client_secret"
+
+        DATABASE_URL="postgres://postgres:postgres@localhost:5432/nelsonlaime"
+
+        UPSTASH_REDIS_REST_URL="http://127.0.0.1:8079"
+        UPSTASH_REDIS_REST_TOKEN="nelsonlaime"
+
+        IP_ADDRESS_SALT="test_ip_address_salt"
+
+        DISCORD_WEBHOOK_URL="test_discord_webhook_url"
+
+        RESEND_API_KEY="test_resend_api_key"
+
+        AUTHOR_EMAIL="test_author_email"
+        NEXT_PUBLIC_UMAMI_URL="test_next_public_umami_url"
+        NEXT_PUBLIC_UMAMI_WEBSITE_ID="test_next_public_umami_website_id"
+
         EOF
