feat: optional environment variables

--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,49 @@
 # ---------------------------------------------------------------------------------------------------------
-# Deployment URL
-# Required in production only (without protocol)
+# [Required]
+#
+# Deployment URL (without protocol)
 # ---------------------------------------------------------------------------------------------------------
-NEXT_PUBLIC_SITE_URL=
+NEXT_PUBLIC_SITE_URL="http://localhost:3000"
 
 # ---------------------------------------------------------------------------------------------------------
+# [Required]
+# Database URL
+# For views, likes, guestbook, comments, authentication.
+# ---------------------------------------------------------------------------------------------------------
+DATABASE_URL="postgres://postgres:postgres@localhost:5432/nelsonlaime"
+
+# ---------------------------------------------------------------------------------------------------------
+# [Required]
+#
+# Redis
+# For caching
+# ---------------------------------------------------------------------------------------------------------
+UPSTASH_REDIS_REST_URL="http://localhost:8079"
+UPSTASH_REDIS_REST_TOKEN="nelsonlaime"
+
+# ---------------------------------------------------------------------------------------------------------
+# [Required]
+#
+# Random string (used for hashing)
+# To identify a single user when they like the post.
+# We hash the IP address so we won't know the actual address.
+#
+# @see https://www.useapassphrase.com/
+# ---------------------------------------------------------------------------------------------------------
+IP_ADDRESS_SALT="random-passphrase"
+
+# ---------------------------------------------------------------------------------------------------------
+# [Required]
+#
+# Authentication
+# @see https://www.better-auth.com/docs/installation#set-environment-variables
+# ---------------------------------------------------------------------------------------------------------
+BETTER_AUTH_SECRET="super_secret_key_32_chars_minimum"
+BETTER_AUTH_URL="http://localhost:3000"
+
+# ---------------------------------------------------------------------------------------------------------
+# [Optional]
+#
 # Spotify Now Playing
 # @see https://developer.spotify.com/documentation/web-api/reference/get-the-users-currently-playing-track
 # ---------------------------------------------------------------------------------------------------------
@@ -13,6 +52,8 @@ SPOTIFY_CLIENT_SECRET=
 SPOTIFY_REFRESH_TOKEN=
 
 # ---------------------------------------------------------------------------------------------------------
+# [Optional]
+#
 # Dashboard page
 # ---------------------------------------------------------------------------------------------------------
 
@@ -28,12 +69,6 @@ GITHUB_TOKEN=
 # @see https://wakatime.com/api-key/
 WAKATIME_API_KEY=
 
-# ---------------------------------------------------------------------------------------------------------
-# Authentication
-# @see https://www.better-auth.com/docs/installation
-# ---------------------------------------------------------------------------------------------------------
-BETTER_AUTH_SECRET=
-
 # Google OAuth
 GOOGLE_CLIENT_ID=
 GOOGLE_CLIENT_SECRET=
@@ -44,34 +79,16 @@ GITHUB_CLIENT_ID=
 GITHUB_CLIENT_SECRET=
 
 # ---------------------------------------------------------------------------------------------------------
-# Database URL
-# For views, likes, guestbook, comments, authentication.
-# ---------------------------------------------------------------------------------------------------------
-DATABASE_URL="postgres://postgres:postgres@localhost:5432/nelsonlaime"
-
-# ---------------------------------------------------------------------------------------------------------
-# Redis
-# For caching
-# ---------------------------------------------------------------------------------------------------------
-UPSTASH_REDIS_REST_URL="http://127.0.0.1:8079"
-UPSTASH_REDIS_REST_TOKEN="nelsonlaime"
-
-# ---------------------------------------------------------------------------------------------------------
-# Random string (used for hashing)
-# To identify a single user when they like the post.
-# We hash the IP address so we won't know the actual address.
+# [Optional]
 #
-# @see https://www.useapassphrase.com/
-# ---------------------------------------------------------------------------------------------------------
-IP_ADDRESS_SALT=
-
-# ---------------------------------------------------------------------------------------------------------
 # Discord Webhook
 # For the notification of new comments from the guestbook.
 # ---------------------------------------------------------------------------------------------------------
 DISCORD_WEBHOOK_URL=
 
 # ---------------------------------------------------------------------------------------------------------
+# [Optional]
+#
 # Resend
 # For the notification of new comments from the blog posts.
 #
@@ -81,6 +98,8 @@ RESEND_API_KEY=
 AUTHOR_EMAIL=
 
 # ---------------------------------------------------------------------------------------------------------
+# [Optional]
+#
 # Analytics
 # Using Umami.
 #
