--- a/turbo.json
+++ b/turbo.json
@@ -5,28 +5,29 @@
     "NODE_ENV",
     "CI",
     "ANALYZE",
-    "PORT",
+    "DATABASE_URL",
+    "UPSTASH_REDIS_REST_URL",
+    "UPSTASH_REDIS_REST_TOKEN",
+    "IP_ADDRESS_SALT",
+    "BETTER_AUTH_SECRET",
+    "BETTER_AUTH_URL",
     "SPOTIFY_CLIENT_ID",
     "SPOTIFY_CLIENT_SECRET",
     "SPOTIFY_REFRESH_TOKEN",
     "GOOGLE_API_KEY",
     "GITHUB_TOKEN",
     "WAKATIME_API_KEY",
-    "BETTER_AUTH_SECRET",
     "GOOGLE_CLIENT_ID",
     "GOOGLE_CLIENT_SECRET",
     "GITHUB_CLIENT_ID",
     "GITHUB_CLIENT_SECRET",
-    "DATABASE_URL",
-    "UPSTASH_REDIS_REST_URL",
-    "UPSTASH_REDIS_REST_TOKEN",
-    "IP_ADDRESS_SALT",
     "DISCORD_WEBHOOK_URL",
-    "NEXT_PUBLIC_UMAMI_URL",
-    "NEXT_PUBLIC_UMAMI_WEBSITE_ID",
     "RESEND_API_KEY",
     "AUTHOR_EMAIL",
-    "NEXT_PUBLIC_SITE_URL"
+    "NEXT_PUBLIC_SITE_URL",
+    "NEXT_PUBLIC_VERCEL_URL",
+    "NEXT_PUBLIC_UMAMI_URL",
+    "NEXT_PUBLIC_UMAMI_WEBSITE_ID"
   ],
   "tasks": {
     "build": {
