refactor: use getBaseUrl whenever the site URL is needed

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
 # ---------------------------------------------------------------------------------------------------------
 # [Required]
 #
-# Deployment URL (without protocol)
+# Deployment URL
 # ---------------------------------------------------------------------------------------------------------
 NEXT_PUBLIC_SITE_URL="http://localhost:3000"
 
@@ -39,7 +39,6 @@ IP_ADDRESS_SALT="random-passphrase"
 # @see https://www.better-auth.com/docs/installation#set-environment-variables
 # ---------------------------------------------------------------------------------------------------------
 BETTER_AUTH_SECRET="super_secret_key_32_chars_minimum"
-BETTER_AUTH_URL="http://localhost:3000"
 
 # ---------------------------------------------------------------------------------------------------------
 # [Optional]
