--- a/turbo.json
+++ b/turbo.json
@@ -24,7 +24,8 @@
     "RESEND_API_KEY",
     "AUTHOR_EMAIL",
     "NEXT_PUBLIC_SITE_URL",
-    "NEXT_PUBLIC_VERCEL_URL",
+    "NEXT_PUBLIC_VERCEL_ENV",
+    "NEXT_PUBLIC_VERCEL_BRANCH_URL",
     "NEXT_PUBLIC_UMAMI_URL",
     "NEXT_PUBLIC_UMAMI_WEBSITE_ID"
   ],
