--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -37,6 +37,8 @@
     "@repo/i18n": "workspace:*",
     "@repo/ui": "workspace:*",
     "@repo/utils": "workspace:*",
+    "@shikijs/rehype": "^3.11.0",
+    "@shikijs/transformers": "^3.11.0",
     "@tanstack/react-query": "^5.80.3",
     "@tanstack/react-query-devtools": "^5.80.3",
     "@tanstack/react-table": "^8.21.3",
@@ -49,6 +51,7 @@
     "dayjs": "^1.11.13",
     "drizzle-zod": "^0.7.1",
     "fast-xml-parser": "^5.2.3",
+    "github-slugger": "^2.0.0",
     "js-sha512": "^0.9.0",
     "lucide-react": "^0.513.0",
     "markdown-to-jsx": "^7.7.6",
@@ -64,10 +67,14 @@
     "react-intersection-observer": "^9.16.0",
     "react-medium-image-zoom": "^5.2.14",
     "react-spring": "^10.0.1",
+    "remark": "^15.0.1",
+    "remark-gfm": "^4.0.1",
     "resend": "^4.5.1",
     "rss": "^1.2.2",
     "shiki": "^3.5.0",
     "tinycolor2": "^1.6.0",
+    "unified": "^11.0.5",
+    "unist-util-visit": "^5.0.0",
     "use-debounce": "^10.0.4",
     "use-sync-external-store": "^1.5.0",
     "zod": "^3.25.51",
@@ -82,13 +89,14 @@
     "@next/bundle-analyzer": "^15.3.3",
     "@repo/eslint-config": "workspace:*",
     "@repo/kv": "workspace:*",
-    "@repo/mdx-plugins": "workspace:*",
     "@repo/shared": "workspace:*",
     "@repo/typescript-config": "workspace:*",
     "@tailwindcss/postcss": "^4.1.8",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@types/canvas-confetti": "^1.9.0",
+    "@types/hast": "^3.0.4",
+    "@types/mdast": "^4.0.4",
     "@types/node": "^22.15.29",
     "@types/react": "^19.1.6",
     "@types/react-dom": "^19.1.6",
