ci: add back next.js typegen

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -55,6 +55,9 @@ jobs:
       - name: Setup
         uses: ./.github/actions/setup
 
+      - name: Generate Next.js route types
+        run: pnpm --filter web typegen
+
       - name: Build MDX
         run: pnpm build:mdx
 
