--- a/packages/kv/package.json
+++ b/packages/kv/package.json
@@ -13,7 +13,7 @@
     "type-check": "tsc --noEmit"
   },
   "lint-staged": {
-    "*.{ts}": "eslint --fix"
+    "*.ts": "eslint --fix"
   },
   "dependencies": {
     "@upstash/ratelimit": "^2.0.5",
